# social-haskell

./: .gitignore  README.md  cabal.sandbox.config  social-haskell.cabal
src/: Main.hs
test/: Main.hs
