name:              social-haskell
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable social-haskell
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,
                   mtl,
                   parsec,
                   containers,
                   text,
                   either-unwrap
