name:              social-haskell
version:           1.1
Build-Type:        Simple
cabal-version:     >= 1.8

-- See advice for de-duplication of deps in http://stackoverflow.com/questions/10163604
library
    hs-source-dirs:     library
    exposed-modules:    App, Parser, Domain
    build-depends:      base,
                        mtl,
                        parsec,
                        containers,
                        text,
                        either-unwrap,
                        transformers,
                        time >= 1.5

executable social-haskell
    main-is:            Main.hs
    hs-source-dirs:     src
    build-depends:      base, time >= 1.5, social-haskell

test-suite behaviour-tests
    type:               exitcode-stdio-1.0
    ghc-options:        -Wall
    hs-source-dirs:     test
    main-is:            Main.hs
    build-depends:      base,
                        hspec == 2.*,
                        time > 1.5,
                        social-haskell
